# stylish-rs

./: Cargo.toml  README.md  bors.toml  deny.toml  lints.toml  rustfmt.toml
.github/: nightly-issue.md
.github/workflows/: coverage.yml  docs.yml  exhaustive.yml  lint.yml  nightly.yml  pull_request.yml  staging.yml
ansi/: Cargo.toml
ansi/src/: ansi.rs  format.rs  io.rs  lib.rs  to_string.rs  util.rs
core/: Cargo.toml
core/src/: arguments.rs  display.rs  docs.rs  format.rs  formatter.rs  io.rs  lib.rs  std_compat.rs  string.rs  style.rs  to_string.rs  traits.rs  write.rs
html/: Cargo.toml
html/src/: format.rs  html.rs  lib.rs  to_string.rs  util.rs
macros/: Cargo.toml
macros/src/: format.rs  lib.rs  to_tokens.rs
plain/: Cargo.toml
plain/src/: format.rs  io.rs  lib.rs  plain.rs  to_string.rs
plain/tests/: tests.rs
src/: ansi.rs  arguments.rs  debug.rs  display.rs  formatter.rs  html.rs  lib.rs  plain.rs  style.rs  traits.rs  write.rs
style/: Cargo.toml
style/src/: lib.rs
tests/: std.rs  tests.rs
tests/std/: README.md  builders.rs  float.rs  mod.rs  num.rs
