[package]
name = "stylish"
version = "0.1.0"
authors = ["Wim Looman <crates.stylish@nemo157.com>"]
edition = "2018"

[workspace]

[dependencies]
stylish-ansi.path = "ansi"
stylish-ansi.version = "0.1.0"
stylish-core.path = "core"
stylish-core.version = "0.1.0"
stylish-html.path = "html"
stylish-html.version = "0.1.0"
stylish-macros.path = "macros"
stylish-macros.version = "0.1.0"
stylish-plain.path = "plain"
stylish-plain.version = "0.1.0"
