[package]
name = "stylish"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Nullus157/stylish-rs"
description = "Yet another crate implementing colorized text"
license = "MIT OR Apache-2.0"

[workspace]

[features]
default = ["std", "macros"]
std = [
    "alloc",
    "stylish-core/std",
    "stylish-ansi?/std",
    "stylish-html?/std",
    "stylish-plain?/std",
]
alloc = [
    "stylish-core/alloc",
    "stylish-ansi?/alloc",
    "stylish-html?/alloc",
    "stylish-plain?/alloc",
]
macros = [
    "stylish-core/macros",
    "stylish-ansi?/macros",
    "stylish-html?/macros",
    "stylish-plain?/macros",
    "dep:stylish-macros",
]
ansi = ["dep:stylish-ansi"]
html = ["dep:stylish-html"]
plain = ["dep:stylish-plain"]
_tests = []

[dependencies]
stylish-ansi.default-features = false
stylish-ansi.path = "ansi"
stylish-ansi.version = "0.1.0"
stylish-ansi.optional = true
stylish-core.default-features = false
stylish-core.path = "core"
stylish-core.version = "0.1.0"
stylish-html.default-features = false
stylish-html.path = "html"
stylish-html.version = "0.1.0"
stylish-html.optional = true
stylish-macros.default-features = false
stylish-macros.path = "macros"
stylish-macros.version = "0.1.0"
stylish-macros.optional = true
stylish-plain.default-features = false
stylish-plain.path = "plain"
stylish-plain.version = "0.1.0"
stylish-plain.optional = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]

[lints.rust]
unexpected_cfgs.level = "warn"
unexpected_cfgs.check-cfg = ['cfg(stylish_proc_macro_expand)']
