[package]
name = "stylish-core"
version = "0.1.0"
authors = ["Wim Looman <crates.stylish@nemo157.com>"]
edition = "2021"

[features]
default = ["std"]
std = ["alloc"]
alloc = []
macros = ["dep:with_builtin_macros", "dep:stylish-macros"]

[dependencies]
with_builtin_macros.default-features = false
with_builtin_macros.version = "0.0.3"
with_builtin_macros.optional = true
stack_dst.default-features = false
stack_dst.version = "0.6.0"
stylish-macros.default-features = false
stylish-macros.path = "../macros"
stylish-macros.version = "=0.1.0"
stylish-macros.optional = true

[dev-dependencies]
stylish.path = ".."
stylish.version = "0.1.0"
