[package]
name = "stylish-html"
version = "0.1.0"
authors = ["Wim Looman <crates.stylish@nemo157.com>"]
edition = "2018"

[features]
default = ["std"]
std = ["alloc", "stylish-core/std"]
alloc = ["stylish-core/alloc"]

[dependencies]
askama_escape.default-features = false
askama_escape.git = "https://github.com/Nemo157/askama"
askama_escape.branch = "askama_escape-no_std"
stylish-core.default-features = false
stylish-core.path = "../core"
stylish-core.version = "0.1.0"
