[package]
name = "stylish-html"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Nullus157/stylish-rs"
license = "MIT OR Apache-2.0"
description = "`stylish` helpers for writing styles as HTML elements"
readme = "../README.md"

[features]
default = ["std"]
std = ["alloc", "stylish-core/std"]
alloc = ["stylish-core/alloc"]
macros = ["stylish-core/macros"]

[dependencies]
askama_escape.default-features = false
askama_escape.version = "0.10.3"
stylish-core.default-features = false
stylish-core.path = "../core"
stylish-core.version = "0.1.0"

[dev-dependencies]
stylish.path = ".."
stylish.version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
