[package]
name = "stylish-macros"
version = "0.1.0"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
nom.default-features = false
nom.features = ["std"]
nom.version = "6.0.1"
proc-macro2.default-features = false
proc-macro2.version = "1.0.24"
quote.default-features = false
quote.version = "1.0.8"
syn.default-features = false
syn.features = ["full", "parsing", "proc-macro", "printing"]
syn.version = "1.0.57"
stylish-style.default-features = false
stylish-style.features = ["alloc"]
stylish-style.version = "=0.1.0"
stylish-style.path = "../style"
