[package]
name = "stylish-macros"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Nullus157/stylish-rs"
license = "MIT OR Apache-2.0"
description = "Internal implementation details of `stylish-core`"
readme = "../README.md"

[lib]
proc-macro = true

[dependencies]
nom.default-features = false
nom.features = ["std"]
nom.version = "7.1.1"
proc-macro2.default-features = false
proc-macro2.version = "1.0.24"
quote.default-features = false
quote.version = "1.0.8"
syn.default-features = false
syn.features = ["full", "parsing", "proc-macro", "printing"]
syn.version = "1.0.102"
stylish-style.default-features = false
stylish-style.features = ["alloc"]
stylish-style.version = "=0.1.0"
stylish-style.path = "../style"
unicode-ident.default-features = false
unicode-ident.version = "1.0.3"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
