[package]
name = "stylish-style"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/Nullus157/stylish-rs"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
stylish.path = ".."
stylish.version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
