[package]
name = "stylish-style"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/Nullus157/stylish-rs"
license = "MIT OR Apache-2.0"
description = "Internal implementation details of `stylish-core`"
readme = "../README.md"

[features]
default = ["std"]
std = ["alloc"]
alloc = []

[dev-dependencies]
stylish.path = ".."
stylish.version = "0.1.0"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu"]
rustdoc-args = ["--cfg", "docsrs"]
